--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -11,12 +11,7 @@
     {% load static %}
     <link href="{% static 'css/bootstrap-5.3.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
-    <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
-    <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-    <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="{% static 'images/favicon.png' %}">
     <meta name="theme-color" content="#712cf9">  
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
   </head>
