--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,6 +8,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link href="{% static 'css/bootstrap-5.3.min.css' %}" rel="stylesheet">
+    <link rel="icon" href="{% static 'images/favicon.png' %}">
     <style>
 
       body {
