--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -4,7 +4,9 @@
     
   {% if task_list %}
 
-  <h3 style="margin-bottom: 1rem;">Open Tasks</h3>
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
+    <h1 class="h2">Open Tasks</h1>
+  </div>
 
   <div class="alert alert-danger hidden" role="alert">
     Submitting tasks failed.
