--- a/tasks/static/css/dashboard.css
+++ b/tasks/static/css/dashboard.css
@@ -83,3 +83,17 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
+
+
+.card {
+  box-shadow: rgba(65, 69, 88, 0.1) 0px 7px 14px 0px, rgba(0, 0, 0, 0.07) 0px 3px 6px 0px;
+}
+
+.card-header {
+  background-color: rgb(249, 250, 253) !important;
+  border-bottom: unset !important;
+}
+
+.card-header h6 {
+  font-size: 0.9rem !important;
+}
