--- a/tasks/static/css/styles.css
+++ b/tasks/static/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Inter', sans-serif !important;
+}
+
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
@@ -94,4 +98,8 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0 !important;
 }
