--- a/tasks/templates/base_generic.html
+++ b/tasks/templates/base_generic.html
@@ -14,6 +14,9 @@
     <link rel="icon" href="{% static 'images/favicon.png' %}">
     <meta name="theme-color" content="#712cf9">  
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
     
