--- a/tips/templates/tips.html
+++ b/tips/templates/tips.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-<h3 style="margin-bottom: 1rem;">Submit Tips</h3>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">        
+  <h1 class="h2">Submit Tips</h1>
+</div>
 
 <div class="list-group w-auto">
 
