--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -31,6 +31,14 @@
             {{ task.assignees|join:", " }}
           </small>
         </span>
+        {% if task.summary %}
+        <div class="descriptionLink" style="display: flex; flex-direction: row; gap: 0.5rem;">
+          <span data-feather="help-circle" class="align-text-bottom" style="width: 20px; height: 20px; stroke-width: 1;"></span>
+          <span class="hidden">
+            {{ task.summary }}
+          </span>
+        </div>
+        {% endif %}
       </label>
       {% endfor %}
       <input type="submit" id="submitTasksBtn" class="w-100 btn btn-lg btn-primary" value="Submit tasks" style="margin-top: 1rem; max-width: 200px;" disabled />
@@ -54,6 +62,28 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade modal-tour" tabindex="-1" role="dialog" id="infoModal">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content rounded-4 shadow">
+          <div class="modal-body p-5">
+            <h2 class="fw-bold mb-0">Task description</h2>
+            <br>
+            <span class="infoModalContent"></span>
+            <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Okay</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <style>
+      .form-checked-content {
+        flex-grow: 1;
+      }
+      .d-flex {
+        align-items: center;
+      }
+    </style>
   
     <script>
 
@@ -81,7 +111,6 @@
           alert.classList.add('hidden');
         }      var form = document.querySelector('form');
         var form_data = new FormData(form);
-        console.log(form_data);
 
         let objSerializedForm = {};
         for (let [name, value] of form_data) {
@@ -116,7 +145,8 @@
         checkSubmitBtnState();
 
         var submitTasksModal = new bootstrap.Modal(document.getElementById("submitTasksModal"), {});
-  
+        var infoModal = new bootstrap.Modal(document.getElementById("infoModal"), {});
+
         document.getElementById('form').onsubmit = function (evt) {
           evt.preventDefault();
           submitTasksModal.show();
@@ -126,6 +156,16 @@
           submitForm();
           submitTasksModal.hide();
         }
+
+        let descriptionLinks = document.querySelectorAll('.descriptionLink') 
+        descriptionLinks.forEach((link) => { 
+          link.addEventListener('click', (event) => {
+            event.preventDefault();
+            var descriptionText = event.target.nextElementSibling.textContent;
+            var infoModalContent = document.querySelector('.infoModalContent').innerHTML = descriptionText;
+            infoModal.show();
+          })
+        })
 
         const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
         let allCheckBox = document.querySelectorAll('.form-check-input')
