--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -8,150 +8,6 @@
       <div class="card-header bg-light">
         <div class="row align-items-center">
           <div class="col">
-            <h6 class="mb-0">My Tasks</h6>
-          </div>
-          <div class="col-auto text-center pe-x1">
-            <br><br>
-          </div>
-        </div>
-      </div>
-      <div class="card-body p-0">
-
-        <div class="tasks-status">        
-          <div>test</div>
-          <canvas class="my-4 w-100" id="tipsChart" width="200" height="100"></canvas>
-        </div>
-
-        <div class="row g-0 align-items-center py-2 position-relative border-bottom border-200">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-primary text-dark"><span class="fs-0 text-primary">F</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Falcon</a><span class="badge rounded-pill ms-2 bg-200 text-primary">38%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">12:50:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 38%" aria-valuenow="38" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row g-0 align-items-center py-2 position-relative border-bottom border-200">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-success text-dark"><span class="fs-0 text-success">R</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Reign</a><span class="badge rounded-pill ms-2 bg-200 text-primary">79%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">25:20:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 79%" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row g-0 align-items-center py-2 position-relative border-bottom border-200">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-info text-dark"><span class="fs-0 text-info">B</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Boots4</a><span class="badge rounded-pill ms-2 bg-200 text-primary">90%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">58:20:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row g-0 align-items-center py-2 position-relative border-bottom border-200">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-warning text-dark"><span class="fs-0 text-warning">R</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Raven</a><span class="badge rounded-pill ms-2 bg-200 text-primary">40%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">21:20:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row g-0 align-items-center py-2 position-relative">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-danger text-dark"><span class="fs-0 text-danger">S</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Slick</a><span class="badge rounded-pill ms-2 bg-200 text-primary">70%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">31:20:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card-footer bg-light p-0"><a class="btn btn-sm btn-link d-block w-100 py-2" href="#!">Show all tasks<span class="fas fa-chevron-right ms-1 fs--2"></span></a></div>
-    </div>
-  </div>
-
-  <div class="col-lg-6 pe-lg-2 mb-3">
-    <div class="card h-lg-100 overflow-hidden">
-      <div class="card-header bg-light">
-        <div class="row align-items-center">
-          <div class="col">
             <h6 class="mb-0">My Tips</h6>
           </div>
           <div class="col-auto text-center pe-x1">
@@ -160,139 +16,24 @@
         </div>
       </div>
       <div class="card-body p-0">
-        <div class="row g-0 align-items-center py-2 position-relative border-bottom border-200">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-primary text-dark"><span class="fs-0 text-primary">F</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Falcon</a><span class="badge rounded-pill ms-2 bg-200 text-primary">38%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">12:50:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 38%" aria-valuenow="38" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row g-0 align-items-center py-2 position-relative border-bottom border-200">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-success text-dark"><span class="fs-0 text-success">R</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Reign</a><span class="badge rounded-pill ms-2 bg-200 text-primary">79%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">25:20:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 79%" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row g-0 align-items-center py-2 position-relative border-bottom border-200">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-info text-dark"><span class="fs-0 text-info">B</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Boots4</a><span class="badge rounded-pill ms-2 bg-200 text-primary">90%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">58:20:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row g-0 align-items-center py-2 position-relative border-bottom border-200">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-warning text-dark"><span class="fs-0 text-warning">R</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Raven</a><span class="badge rounded-pill ms-2 bg-200 text-primary">40%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">21:20:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row g-0 align-items-center py-2 position-relative">
-          <div class="col ps-x1 py-1 position-static">
-            <div class="d-flex align-items-center">
-              <div class="avatar avatar-xl me-3">
-                <div class="avatar-name rounded-circle bg-soft-danger text-dark"><span class="fs-0 text-danger">S</span></div>
-              </div>
-              <div class="flex-1">
-                <h6 class="mb-0 d-flex align-items-center"><a class="text-800 stretched-link" href="#!">Slick</a><span class="badge rounded-pill ms-2 bg-200 text-primary">70%</span></h6>
-              </div>
-            </div>
-          </div>
-          <div class="col py-1">
-            <div class="row flex-end-center g-0">
-              <div class="col-auto pe-2">
-                <div class="fs--1 fw-semi-bold">31:20:00</div>
-              </div>
-              <div class="col-5 pe-x1 ps-2">
-                <div class="progress bg-200 me-2" style="height: 5px;">
-                  <div class="progress-bar rounded-pill" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+
+        <div class="tips-status">        
+          <canvas class="my-4 w-100" id="tipsChart" width="200" height="100"></canvas>
         </div>
       </div>
-      <div class="card-footer bg-light p-0"><a class="btn btn-sm btn-link d-block w-100 py-2" href="#!">Show all tasks<span class="fas fa-chevron-right ms-1 fs--2"></span></a></div>
+      <div class="card-footer bg-light p-0"><a class="btn btn-sm btn-link d-block w-100 py-2" href="/tips">Submit Tips<span class="fas fa-chevron-right ms-1 fs--2"></span></a></div>
     </div>
   </div>
+
 </div>
 
 <style>
   .btn-link {
     text-decoration: none;
   }
-  .tasks-status {
+  .tips-status {
     display: flex;
-    padding: 2rem;
+    padding: 0rem 1rem;
   }
 </style>
 
@@ -300,25 +41,36 @@
 <script src="{% static 'js/chartjs-4.2.0.min.js' %}"></script>
 <script language="javascript">
   (() => {
-    var data = {
-      labels: ["Done", "Open"],
-      datasets: [
-        {
-          label: "TeamA Score",
-          data: [10, 90],
-          backgroundColor: [
-            "#2c7be5",
-            "#d8e2ef",
-          ],
-        }
-      ]
-    };
     'use strict'
+    // Graphs
     const ctx = document.getElementById('tipsChart')
+    // eslint-disable-next-line no-unused-vars
     const myChart = new Chart(ctx, {
-      type: 'doughnut',
-      data: data,
+      type: 'bar',
+      data: {
+        datasets: [{
+          data: {{ tipsEval | safe }},
+        }]
+      },
       options: {
+        scales: {
+          y: {
+            ticks: {
+              stepSize: 5,
+              beginAtZero:true,
+              callback: function(value, index, values) {
+                      return value + ' €';
+              }
+            },
+          },
+          x: {
+            ticks: {
+              callback: function(value, index, values) {
+                      return this.getLabelForValue (value) + ' KW';
+              }
+            },
+          }
+        },
         plugins: {
           legend: {
               display: false
