--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -25,7 +25,38 @@
     </div>
   </div>
 
+  <div class="col-lg-6 pe-lg-2 mb-3">
+    <div class="card h-lg-100 overflow-hidden">
+      <div class="card-header bg-light">
+        <div class="row align-items-center">
+          <div class="col">
+            <h6 class="mb-0">Next Shifts</h6>
+          </div>
+          <div class="col-auto text-center pe-x1">
+            <br><br>
+          </div>
+        </div>
+      </div>
+      <div class="card-body p-0">
+        <ul class="shifts">
+        {% for shift in nextShifts %}
+          <li>
+            <div class="date">
+              {{ shift.day }}
+              <span class="weekday">{{ shift.weekday }}</span>
+            </div>
+            <div class="shift">
+              <span class="time">{{ shift.start }} – {{ shift.end }}</span>
+              <span class="location">iaro, Sophienstraße</span>
+            </div>
+          </li>
+        {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 <style>
   .btn-link {
@@ -34,6 +65,46 @@
   .tips-status {
     display: flex;
     padding: 0rem 1rem;
+  }
+  ul.shifts {
+    list-style: none;
+    padding: 0;
+    margin-top: 0.5rem;
+  }
+  ul.shifts li {
+    display: flex;
+    align-items: center;
+    margin: 0.25rem 1rem 0.25rem 0;
+  }
+  ul.shifts li .date {
+    padding: 1rem;
+    font-size: 1.4rem;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  ul.shifts li .date .weekday {
+    font-size: 0.7rem;
+    color: #969696;
+    font-weight: 600;
+    margin-top: -0.4rem;
+  }
+  ul.shifts li .shift {
+    background: #feebef;
+    padding: 0.7rem 1.4rem;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  ul.shifts li .shift .time {
+    font-size: 1rem;
+    font-weight: 600;
+    color: #d35d7d;
+  }
+  ul.shifts li .shift .location {
+    color: #8a7f82;
   }
 </style>
 
