Service also included now

--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -92,7 +92,7 @@
             </ul>
             
             {% load is_member%}
-            {% if user.is_superuser or user|is_member:'Barista'  %}
+            {% if user.is_superuser or user|is_member:'Barista' or user|is_member:'Service' %}
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
               <span>Reports</span>
             </h6>
