--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -75,6 +75,8 @@
                   Inventory
                 </a>
               </li>
+              {% load is_member %}
+              {% if user.is_superuser or user|is_member:'Barista' %}
               <li class="nav-item">
                 {% url 'tips' as tips_url %}
                 {% if request.path == tips_url %}
@@ -86,10 +88,11 @@
                   Tips
                 </a>
               </li>
+              {% endif %}
             </ul>
             
             {% load is_member%}
-            {% if user.is_superuser or user|is_member:'Barista'  %}
+            {% if user.is_superuser or user|is_member:'Barista' or user|is_member:'Service' %}
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
               <span>Reports</span>
             </h6>
