change layout of tasks in inventory, showing who did the task and when, adding registration with planday support

--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -142,6 +142,16 @@
 
           {% block content %}{% endblock %}
 
+          {% if messages %}
+          <ul class="messages">
+              {% for message in messages %}
+                {% if message.tags == 'error' %}
+                  <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endif %}
+              {% endfor %}
+          </ul>
+          {% endif %}
+
         </main>
       </div>
     </div>
